<resources>
    <string name="app_name">TFLite Image Classification</string>
    <string name="ML_reconize_service">ML Reconize Service</string>
    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>

    <string name="label_models">ML Model</string>
    <string name="default_threshold">0.50</string>
    <string name="default_inference_time">0ms</string>
    <string name="default_max_results">3</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientNet Lite0</item>
        <item>EfficientNet Lite1</item>
        <item>EfficientNet Lite2</item>
    </string-array>
</resources>